# sdk-notion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
notion/: __init__.py
notion/auth/: __init__.py
notion/client/: __init__.py  blocks.py  databases.py  pages.py
notion/orm/: __init__.py
notion/orm/accessors/: PageProperty.py  __init__.py
notion/orm/common/: QueryFilter.py  QuerySort.py  SetProperty.py  __init__.py
notion/orm/common/.examples/: QueryFilter.py  QuerySort.py
notion/orm/config/: __init__.py
notion/orm/extrators/: Properties.py  __init__.py
notion/orm/mapping/: __init__.py  database.py  registry.py
notion/orm/parsers/: PageProperties.py  __init__.py
notion/orm/repositories/: __init__.py
notion/orm/repositories/databases/: CreateDatabasePage.py  SearchPage.py  SearchPageProperty.py  __init__.py
notion/orm/repositories/pages/: CreatePage.py  GetPage.py  GetPageProperty.py  __init__.py
notion/schemas/: __init__.py  dto.py
notion/schemas/orm/: __init__.py
notion/schemas/orm/database/: DatabasesContainer.py  SearchPageProperty.py  __init__.py
notion/schemas/orm/properties/: RichText.py
notion/schemas/responses/: __init__.py
notion/schemas/responses/blocks/: Block.py  BlockList.py  Toggle.py  __init__.py
notion/schemas/responses/databases/: Query.py  __init__.py
notion/schemas/responses/errors/: Error.py  __init__.py
notion/schemas/responses/misc/: Parent.py  __init__.py
notion/schemas/responses/pages/: Page.py  Parent.py  __init__.py
notion/types/orm/: __init__.py
(+22 files in other folders)
