[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["notion"]

[project]
name = "sdk-notion"
version = "0.1.0"
description = "Async Python SDK for the Notion API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Eduardo Riguetto" }
]
dependencies = [
  "httpx>=0.25,<1.0",
  "pydantic>=2.5,<3.0"
]

[project.urls]
Homepage = "https://github.com/riguettodev/sdk-notion"
Repository = "https://github.com/riguettodev/sdk-notion"
